Changed Tony's Date of Birth text

--- a/AboutUs/tony.html
+++ b/AboutUs/tony.html
@@ -63,7 +63,7 @@
 				<tr>
 					<td valign="top"><img src="./Images/tony.jpg" width="200" height="200" border="0" style="margin-right: 10px;"><p />
 					Fullname: Tony Seeley<br />
-				  	Date of Birth: 2 August 1963 - Yes I'm quite old'<br />
+				  	Date of Birth: 2 August 1963<br />
 				  	Current Age: <script type="text/javascript">document.write(calcAge(new Date("Aug 2, 1963")));</script><br />
 				  	Place of Birth: London UK<br />
 				  	Hobbies: Lots<br />
